<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.adventofcode.flashk</groupId>
	<artifactId>advent-of-code-2023</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>advent-of-code-2023</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- Testing -->
		<junit.jupiter.version>6.0.1</junit.jupiter.version>
		<equalsverifier.version>4.2.5</equalsverifier.version>

		<!-- Apache Commons libraries -->
		<commons-collections4.version>4.5.0</commons-collections4.version>
		<commons-lang3.version>3.20.0</commons-lang3.version>
		<commons-math3.version>3.6.1</commons-math3.version>

		<!-- Math -->
		<ojalgo.version>56.1.1</ojalgo.version>

		<!-- JSON Management -->
		<jackson-databind.version>2.20.1</jackson-databind.version>
		<gson.version>2.13.2</gson.version>

		<!-- Graphs -->
		<jgrapht.version>1.5.2</jgrapht.version>

		<!-- Others -->
		<lombok.version>1.18.42</lombok.version>
		<jetbrains-annotations.version>26.0.2-1</jetbrains-annotations.version>

		<!-- Plugins -->
		<maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
		<maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
		<maven.compiler.release>25</maven.compiler.release>
		<jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>

	</properties>

	<dependencies>

		<!-- Testing -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>nl.jqno.equalsverifier</groupId>
			<artifactId>equalsverifier</artifactId>
			<version>${equalsverifier.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- Apache Commons libraries -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>${commons-collections4.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>${commons-math3.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-geometry-euclidean</artifactId>
			<version>1.0</version>
		</dependency>


		<!-- Math libraries -->
		<dependency>
			<groupId>org.ojalgo</groupId>
			<artifactId>ojalgo</artifactId>
			<version>${ojalgo.version}</version>
		</dependency>

		<!-- JSON management -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson-databind.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${gson.version}</version>
		</dependency>

		<!-- Graphs -->
		<dependency>
			<groupId>org.jgrapht</groupId>
			<artifactId>jgrapht-core</artifactId>
			<version>${jgrapht.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jgrapht</groupId>
			<artifactId>jgrapht-io</artifactId>
			<version>${jgrapht.version}</version>
		</dependency>

		<!-- Others -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>${jetbrains-annotations.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.github.mifmif</groupId>
			<artifactId>generex</artifactId>
			<version>1.0.2</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-maven-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
